Cleaning INFOCOM tests

--- a/bin/datanode_logger.conf
+++ b/bin/datanode_logger.conf
@@ -13,7 +13,7 @@ level = DEBUG
 qualname = root
 
 [handler_console]
-class = StreamHandler
+class = logging.StreamHandler
 level = DEBUG
 formatter = generic
 args = (sys.stdout,)
